# VIGILBACKEND

./: README.md  pyproject.toml  requirements.txt
src/: main.py
src/api/: crime_routes.py
src/database/: config.py
src/database/models/: video.py
src/schemas/: video.py
src/services/: crime_service.py
